--- a/prometheus.yml
+++ b/prometheus.yml
@@ -35,3 +35,14 @@ scrape_configs:
 
     static_configs:
     - targets: ['kafka-exporter:9308']
+
+  - job_name: 'cadvisor'
+
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+    dns_sd_configs:
+    - names:
+      - 'tasks.cadvisor'
+      type: 'A'
+      port: 8080
+      
