--- a/prometheus.yml
+++ b/prometheus.yml
@@ -21,28 +21,29 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
-
     static_configs:
     - targets: ['localhost:9090']
 
-  - job_name: 'kafka-exporter'
+    # - job_name: 'kafka-exporter'
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
-    static_configs:
-    - targets: ['kafka-exporter:9308']
+    #    static_configs:
+    #    - targets: ['kafka-exporter:9308']
 
   - job_name: 'cadvisor'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
     dns_sd_configs:
     - names:
       - 'tasks.cadvisor'
       type: 'A'
       port: 8080
-      
+    
+  - job_name: 'node-exporter'
+    dns_sd_configs:
+    - names:
+      - 'tasks.node-exporter'
+      type: 'A'
+      port: 9100  
